[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/HUD/inventory.png" type="Texture" id=1]
[ext_resource path="res://SymphonyoftheNightfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Inventory.gd" type="Script" id=4]
[ext_resource path="res://assets/Items/Chaos_longsword.png" type="Texture" id=5]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/plus-button.png-f98ce6f0d19e9cd202385f68f847b03c.stex"

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 3 )

[node name="Inventory" type="Node2D"]
visible = false
script = ExtResource( 4 )

[node name="Inventory" type="Sprite" parent="."]
position = Vector2( 640.098, 353.096 )
texture = ExtResource( 1 )

[node name="StrengthUpgrade" type="Button" parent="Inventory"]
margin_left = -287.433
margin_top = -85.5262
margin_right = -230.433
margin_bottom = -34.5262
rect_pivot_offset = Vector2( 41, 38 )
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceUpgrade" type="Button" parent="Inventory"]
margin_left = 119.0
margin_top = -86.0
margin_right = 176.0
margin_bottom = -35.0
rect_pivot_offset = Vector2( 41, 38 )
icon = SubResource( 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Experience" type="Label" parent="Inventory"]
margin_left = -37.0
margin_top = -255.0
margin_right = 369.0
margin_bottom = -216.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthXPUpgrade" type="Label" parent="Inventory"]
margin_left = -451.058
margin_top = -75.5051
margin_right = -308.058
margin_bottom = -36.5051
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceXPUpgrade" type="Label" parent="Inventory"]
margin_left = -24.9553
margin_top = -75.5051
margin_right = 102.045
margin_bottom = -36.5051
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" type="Label" parent="Inventory"]
margin_left = 246.0
margin_top = -137.0
margin_right = 434.0
margin_bottom = -98.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" type="Label" parent="Inventory"]
margin_left = -143.0
margin_top = -137.0
margin_right = 35.0
margin_bottom = -98.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="Sprite" parent="Inventory"]
position = Vector2( -320.985, 86.9038 )
texture = ExtResource( 5 )

[node name="slot2" type="Sprite" parent="Inventory"]

[node name="slot3" type="Sprite" parent="Inventory"]

[node name="slot4" type="Sprite" parent="Inventory"]

[node name="slot5" type="Sprite" parent="Inventory"]

[node name="slot6" type="Sprite" parent="Inventory"]
[connection signal="draw" from="Inventory" to="." method="_on_Inventory_draw"]
[connection signal="pressed" from="Inventory/StrengthUpgrade" to="." method="_on_StrengthUpgrade_pressed"]
[connection signal="pressed" from="Inventory/DefenceUpgrade" to="." method="_on_DefenceUpgrade_pressed"]
